--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,6 +1,6 @@
 #Minecraft server properties
-#Wed Mar 19 17:42:42 UTC 2025
-allow-flight=false
+#Thu Mar 20 15:58:41 UTC 2025
+allow-flight=true
 allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
